feat: 비슷한 도면 검색